fix(MdLayout): make all content inside a layout without wrap

--- a/src/components/MdLayout/layout.scss
+++ b/src/components/MdLayout/layout.scss
@@ -9,7 +9,6 @@
 [class*="md-layout"] {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   flex: 1;
 
   &.md-centered {
